# vchain-plus

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  README.md  build_db.sh  gen_query.bash  output.txt  output_query.txt  query.sh  query2.bash  res_analysis.py
.cargo/: config
acc-benchmark/: Cargo.toml
acc-benchmark/benches/: bench.rs  prof.rs
acc-benchmark/src/: lib.rs
data/db/test1/: param.json
data/db/test1/blk_head.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365751759  LOG.old.1625298222537548  MANIFEST-000015  OPTIONS-000018
data/db/test1/block_content.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365767022  LOG.old.1625298222556939  MANIFEST-000015  OPTIONS-000012
data/db/test1/bplus_tree.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365787555  LOG.old.1625298222584039  MANIFEST-000015  OPTIONS-000012
data/db/test1/id_tree.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365778101  LOG.old.1625298222570663  MANIFEST-000015  OPTIONS-000018
data/db/test1/obj.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365809339  LOG.old.1625298222613670  MANIFEST-000015  OPTIONS-000018
data/db/test1/trie.db/: 000008.sst  000014.sst  IDENTITY  LOG  LOG.old.1625293365798595  LOG.old.1625298222598744  MANIFEST-000015  OPTIONS-000012
data/query/: 4sq-small.json  eth_k_test.json  eth_r_test.json  test.json  test0.json  test0_k.json  test0_r.json  test0_r_k.json  test1.json
data/query/generated_query/keyword_t100_n1/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t100_n2/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t100_n4/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t10_n1/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t10_n2/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t10_n4/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t50_n1/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t50_n2/: vchain.json  vchain_plus.json
data/query/generated_query/keyword_t50_n4/: vchain.json  vchain_plus.json
data/query/generated_query/range_t1000_s1/: vchain.json  vchain_plus.json
data/query/generated_query/range_t100_s01/: vchain.json  vchain_plus.json
data/query/generated_query/range_t10_s0001/: vchain.json  vchain_plus.json
data/query/generated_query/range_t50_s001/: vchain.json  vchain_plus.json
data/result/: test1_build_res.json  test1_query_res.json
keys/: pk  sk
keys/test_key/: pk  sk
src/: acc.rs  chain.rs  digest.rs  lib.rs  utils.rs
src/acc/: acc_value.rs  acc_values.rs  keys.rs  ops.rs  poly.rs  serde_impl.rs  set.rs  utils.rs
src/chain/: block.rs  block_ads.rs  bplus_tree.rs  hash.rs  id_tree.rs  index.rs  object.rs  query.rs  range.rs  tests.rs  traits.rs  trie_tree.rs  types.rs  verify.rs
src/chain/block/: block_ads.rs  build.rs  hash.rs
src/chain/bplus_tree/: hash.rs  proof.rs  read.rs  tests.rs  utils.rs  write.rs
src/chain/bplus_tree/proof/: leaf.rs  non_leaf.rs  res_sub_tree.rs  sub_proof.rs  sub_tree.rs
src/chain/id_tree/: hash.rs  proof.rs  read.rs  tests.rs  write.rs
src/chain/id_tree/proof/: leaf.rs  non_leaf.rs  sub_proof.rs  sub_tree.rs
src/chain/query/: egg_qp.rs  query_dag.rs  query_obj.rs  query_param.rs  query_plan.rs
src/chain/trie_tree/: hash.rs  proof.rs  read.rs  tests.rs  write.rs
src/chain/trie_tree/proof/: leaf.rs  non_leaf.rs  non_leaf_root.rs  sub_proof.rs  sub_tree.rs
src/chain/verify/: hash.rs  vo.rs
