[package]
name = "vchain-plus"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
ark-bls12-381 = { path = "./vendor/curves/bls12_381" }
ark-ec = { path = "./vendor/algebra/ec", features = ["parallel"] }
ark-ff = { path = "./vendor/algebra/ff", features = ["asm", "parallel"] }
ark-poly = { path = "./vendor/algebra/poly", features = ["parallel"] }
bincode = "1.3"
blake2b_simd = "0.5"
hex = "0.4"
howlong = "0.1"
itertools = "0.10"
once_cell = "1.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
rand = "0.7"
serde_json = "1.0"

[workspace]
exclude = [
    "vendor",
]

[patch.'https://github.com/arkworks-rs/algebra']
ark-ec = { path = "./vendor/algebra/ec" }
ark-ff = { path = "./vendor/algebra/ff" }
ark-ff-asm = { path = "./vendor/algebra/ff-asm" }
ark-ff-macros = { path = "./vendor/algebra/ff-macros" }
ark-serialize = { path = "./vendor/algebra/serialize" }

[patch.'https://github.com/arkworks-rs/utils']
ark-std = { path = "./vendor/utils/std" }
