[package]
name = "vchain-plus"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>", "Haixing Wang <hxwang@comp.hkbu.edu.hk>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
ark-bls12-381 = "0.2"
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
ark-poly = { version = "0.2", features = ["parallel"] }
ark-serialize = "0.2"
bincode = "1.3"
blake2b_simd = "0.5"
derive_more = "0.99"
hex = "0.4"
howlong = "0.1"
itertools = "0.10"
num-traits = "0.2"
once_cell = "1.7"
rand = "0.7"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.6", features = ["serde"] }
smol_str = "0.1.17"
tracing = "0.1"
tracing-subscriber = "0.2"
petgraph = {version = "0.5.1"}
[dev-dependencies]
ark-bls12-381 = "0.2"

[workspace]
exclude = [
    "acc-benchmark",
]
