[package]
name = "vchain-plus"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>", "Haixing Wang <hxwang@comp.hkbu.edu.hk>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
ark-bn254 = "0.3"
ark-ec = { version = "0.3", features = ["parallel"] }
ark-ff = { version = "0.3", features = ["asm", "parallel"] }
ark-serialize = "0.3"
bincode = "1.3"
blake2b_simd = "0.5"
derive_more = "0.99"
egg = "0.6"
hex = "0.4"
howlong = "0.1"
itertools = "0.10"
memmap2 = "0.3"
num-traits = "0.2"
once_cell = "1.8"
petgraph = { version = "0.5", features = ["serde-1"] }
rand = "0.8"
rayon = "1.5"
rocksdb = "0.16"
snap = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.1", features = ["serde"] }
smallvec = { version = "1.6", features = ["serde"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
ark-bn254 = "0.3"
tempfile = "3.2"

[profile.release]
lto = true
opt-level = 3

[workspace]
exclude = [
    "acc-benchmark",
]
