[package]
name = "acc-benchmark"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[[bench]]
name = "bench"
harness = false

[dependencies]
ark-ec = { version = "0.2", features = ["parallel"] }
ark-ff = { version = "0.2", features = ["asm", "parallel"] }
criterion = { version = "0.3", features = ["html_reports"] }
once_cell = "1.7"
rand = "0.7"
vchain-plus = { path = "../" }

ark-bls12-377 = "0.2"
ark-bls12-381 = "0.2"
ark-bn254 = "0.2"
ark-bw6-761 = "0.2"
ark-cp6-782 = "0.2"
ark-mnt4-298 = "0.2"
ark-mnt4-753 = "0.2"
ark-mnt6-298 = "0.2"
ark-mnt6-753 = "0.2"
