[package]
name = "acc-benchmark"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
publish = false

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "prof"
harness = false

[profile.bench]
debug = true

[dependencies]
ark-ec = { version = "0.3", features = ["parallel"] }
ark-ff = { version = "0.3", features = ["asm", "parallel"] }
criterion = { version = "0.3", features = ["html_reports"] }
once_cell = "1.8"
pprof = { version = "0.5", features = ["criterion", "flamegraph"] }
rand = "0.8"
vchain-plus = { path = "../" }

ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-bn254 = "0.3"
ark-bw6-761 = "0.3"
ark-cp6-782 = "0.3"
ark-mnt4-298 = "0.3"
ark-mnt4-753 = "0.3"
ark-mnt6-298 = "0.3"
ark-mnt6-753 = "0.3"
